testsuite/tests/typing-layouts-err-msg/probe.reference
File "probe.ml", line 13, characters 2-6:
13 |   f ()
       ^^^^
Error: This expression has type "float#" but an expression was expected of type
         "unit"
